// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display loading 1`] = `
<div
  className="boxed-group project-card boxed-group-loading"
  data-key="foo"
>
  <div
    className="boxed-group-actions text-right"
  />
  <div
    className="boxed-group-header"
  >
    <h2
      className="project-card-name"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        Foo
      </Link>
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <ProjectCardMeasures />
  </div>
</div>
`;

exports[`should display tags 1`] = `
<div
  className="boxed-group project-card boxed-group-loading"
  data-key="foo"
>
  <div
    className="boxed-group-actions text-right"
  >
    <TagsList
      allowUpdate={false}
      customClass="spacer-left"
      tags={
        Array [
          "foo",
          "bar",
        ]
      }
    />
  </div>
  <div
    className="boxed-group-header"
  >
    <h2
      className="project-card-name"
    >
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/dashboard",
            "query": Object {
              "id": "foo",
            },
          }
        }
      >
        Foo
      </Link>
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <ProjectCardMeasures />
  </div>
</div>
`;

exports[`should not display analysis date 1`] = `undefined`;
